index page, base structure. title and subtitle

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
     <head>
         <title>Diffie Hellman - Generate keys</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles/base.css">
+        <link rel="stylesheet" href="styles/index.css">
     </head>
     <body>
-        <div>ciao</div>
+        <div class="main">
+            <div class="cont">
+                <div class="title">Elliptic Curve Diffie Hellman</div>
+                <div class="subtitle">Generate the keys</div>
+                <div class="cont-gen">
+
+                </div>
+            </div>
+        </div>
     </body>
 </html>
