--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
         <div class="main">
             <div class="cont">
                 <div class="title">Elliptic Curve Diffie Hellman</div>
-                <div class="subtitle">Generate the keys</div>
-                <div class="cont-gen">
-
+                <div class="content">
+                    <p class="subtitle">
+                        Learn how the Elliptic Curve Diffie-Hellman (ECDH) algorithm
+                         enables secure key exchange. This method allows two parties
+                         to establish a shared secret key over an insecure channel,
+                         ensuring confidentiality and security in communication. 
+                    </p>
+                    <button onclick="start()">Start</button>
                 </div>
             </div>
         </div>
     </body>
+
+    <script>
+        function start() {
+
+        }   
+    </script>
 </html>
