--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Diffie Hellman - Generate keys</title>
+        <title>Diffie Hellman - Home</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/index.css">
     </head>
     <body>
+        <div class="header">
+            <div class="home-cont">
+                <a href="index.html"><img src="icons/home.png" alt="home"></a>
+            </div>
+            <h1>Elliptic Curve Diffie Hellman</h1>
+            <div class="git-cont">
+                <a href="https://github.com/MaarcooC/ECDH" target="_blank"><img src="icons/github-mark-white.png" alt="github"></a>
+            </div>
+        </div>
         <div class="main">
             <div class="cont">
                 <div class="title">Elliptic Curve Diffie Hellman</div>
